添加中文显示

--- a/_locales/zh/ikbit-strings.json
+++ b/_locales/zh/ikbit-strings.json
@@ -12,5 +12,53 @@
 
 	"ikbit.wsgGetTem|block":"BIT-温湿光 获取温度值",
 	"ikbit.wsgGetDam|block":"BIT-温湿光 获取湿度值",
-	"ikbit.wsgGetLight|block":"BIT-温湿光 获取光强度值"
+	"ikbit.wsgGetLight|block":"BIT-温湿光 获取光强度值",
+
+	"ikbit.yaoganGetValue|block":"BIT-摇杆 获取数值|%xy",
+	"ikbit.smgDisNumber|block=":"BIT-数码管 显示数字|%num",
+	"ikbit.smgRollDisNumber|block":"BIT-数码管 滚动显示数字|%num",
+	"ikbit.smgSetLighteness|block":"BIT-数码管 设置亮度|%level",
+	"ikbit.smgSetOneBitNumber|block":"BIT-数码管 位显示数字|第%s位|%d",
+	"ikbit.smgSetOneBitCode|block":"BIT-数码管 位显示编码|第%s位|%d",
+	"ikbit.smgSetBlinkOneBit|block":"BIT-数码管 闪烁位|%s",
+	"ikbit.smgClearBlink|block":"BIT-数码管 清除闪烁效果",
+	"ikbit.smgClearDisplay|block":"BIT-数码管 清除显示",
+
+	
+	"ikbit.keyBoardClickState|block":"BIT-矩阵键盘 按键点击|%k",
+	"ikbit.keyBoardLongClickState|block":"BIT-矩阵键盘 按键长点击|%k",
+	"ikbit.keyBoardLongHoldState|block":"BIT-矩阵键盘 按键长按保持|%k",
+
+	"bitLcd5110.lcd5110DisGame1Mode|block":"BIT-LCD5110 游戏1模式",
+	"bitLcd5110.lcd5110DisGame2Mode|block":"BIT-LCD5110 游戏2模式",
+	"bitLcd5110.lcd5110DisGame3Mode|block":"BIT-LCD5110 游戏3模式",
+	"bitLcd5110.lcd5110Cmd|block":"BIT-LCD5110 命令|%cmd",
+	"bitLcd5110.lcd5110CmdNumber|block":"BIT-LCD5110 数字命令|%num",
+	"bitLcd5110.lcd5110DisMenuMode|block":"BIT-LCD5110 菜单模式",
+	"bitLcd5110.lcd5110MenuAddItem|block":"BIT-LCD5110 菜单添加条目|%str",
+	"bitLcd5110.lcd5110MenuCheckNowItem|block":"BIT-LCD5110 获取当前菜单条目号",
+	"bitLcd5110.lcd5110MenuClearItem|block":"BIT-LCD5110 清除菜单条目",
+	"bitLcd5110.lcd5110Popup|block":"BIT-LCD5110 弹窗显示|%str|时间 %time",
+	"bitLcd5110.lcd5110DisVersionMode|block":"BIT-LCD5110 显示版本号模式",
+	"bitLcd5110.lcd5110ScreenSaverMode|block":"BIT-LCD5110 显示屏保模式",
+	"bitLcd5110.lcd5110BackLight|block":"BIT-LCD5110 设置背景灯|%light",
+	"bitLcd5110.lcd5110DisDrawMode|block":"BIT-LCD5110 绘画模式",
+	"bitLcd5110.lcd5110DrawPixel|block":"BIT-LCD5110 画像素点|x %x|y %y",
+	"bitLcd5110.lcd5110DrawLine|block":"BIT-LCD5110 画直线|x0 %x0|y0 %y0|x1 %x1|y1 %y1",
+	"bitLcd5110.lcd5110DrawVLine|block":"BIT-LCD5110 画竖线线|x %x|y %y|高度 %h",
+	"bitLcd5110.lcd5110DrawHLine|block":"BIT-LCD5110 画竖线线|x %x|y %y|宽度 %w",
+	"bitLcd5110.lcd5110DrawRect|block":"BIT-LCD5110 画矩形|x %x|y %y|宽度 %w|高度 %h",
+	"bitLcd5110.lcd5110FillRect|block":"BIT-LCD5110 填充矩形|x %x|y %y|宽度 %w|高度 %h",
+	"bitLcd5110.lcd5110FillScreen|block":"BIT-LCD5110 填充屏幕",
+	"bitLcd5110.lcd5110ClearScreen|block":"BIT-LCD5110 清除屏幕",
+	"bitLcd5110.lcd5110DrawCircle|block":"BIT-LCD5110 画圆|x %x|y %y|半径 %r",
+	"bitLcd5110.lcd5110FillCircle|block":"BIT-LCD5110 填充圆|x %x|y %y|半径 %r",
+	"bitLcd5110.lcd5110DrawPartCircle|block":"BIT-LCD5110 画部分圆|x %x|y %y|半径 %r|部分 %p",
+	"bitLcd5110.lcd5110DrawTriangle|block":"BIT-LCD5110 画三角形|x0 %x0|y0 %y0|x1 %x1|y1 %y1|x2 %x2|y2 %y2",
+	"bitLcd5110.lcd5110FillTriangle|block":"BIT-LCD5110 填充三角形|x0 %x0|y0 %y0|x1 %x1|y1 %y1|x2 %x2|y2 %y2",
+	"bitLcd5110.lcd5110RoundRect|block":"BIT-LCD5110 画圆角矩形|x %x|y %y|宽度 %w|高度 %h|圆角半径 %r",	
+	"bitLcd5110.lcd5110SetCursor|block":"BIT-LCD5110 设置光标|x %x|y %y",
+	"bitLcd5110.lcd5110Print|block":"BIT-LCD5110 打印显示|%str",
+	"bitLcd5110.lcd5110Println|block":"BIT-LCD5110 带换行打印显示|%str",
+	"bitLcd5110.lcd5110DrawChar|block":"BIT-LCD5110 字符显示|x %x|y %y|字符 %c|放大倍数 %size"
 }
